deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  labels:
    app: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: 216569733367.dkr.ecr.ap-south-1.amazonaws.com/petshop
        ports:
        - containerPort: 8080
