service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - port: 8080
    targetPort: 8080
